--- a/DemoIdentity/appsettings.json
+++ b/DemoIdentity/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-52JVF51G\\SQLEXPRESS;TrustServerCertificate=True; Initial Catalog=DemoIdentity;User ID=sa;Password=123456",
+    "DefaultConnection": "Data Source=MSI; TrustServerCertificate=True; Initial Catalog=FPTBookStore;User ID=sa;Password=123456",
     "DemoIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DemoIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
