--- a/DemoIdentity/appsettings.json
+++ b/DemoIdentity/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-52JVF51G\\SQLEXPRESS;TrustServerCertificate=True; Initial Catalog=DemoIdentity;User ID=sa;Password=123456",
-    "DemoIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=DemoIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=MSI; TrustServerCertificate=True; Initial Catalog=Store;User ID=sa;Password=123456"
+
   },
   "Logging": {
     "LogLevel": {
